# solana-stablecoin-standard-1

./: .dockerignore  .env  Anchor.toml  Cargo.toml  README.md  TODO.md  Trident.toml  package-lock.json  package.json
.github/workflows/: ci.yml
assets/: metadata.json
backend/: package-lock.json  package.json  tsconfig.json
backend/docker/: Dockerfile  docker-compose.yml  smoke-test.sh
backend/src/: app.ts  indexer.ts  server.ts
backend/tests/: api.test.ts
cli/src/: index.ts
cli/src/commands/: allowlist.ts  ask.ts  authority.ts  blacklist.ts  burn.ts  freeze.ts  holders.ts  index.ts  init.ts  metadata.ts  mint.ts  minters.ts  oracle.ts  roles.ts  seize.ts  shared.ts  status.ts  supply.ts  transfer.ts
cli/src/idl/: sss_token.json
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md  SDK.md  SSS-3.md
evidence/: DEVNET_EVIDENCE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  MintAddressBar.tsx  Sidebar.tsx
frontend/src/hooks/: useStablecoin.ts
frontend/src/idl/: sss_token.json  sss_transfer_hook.json
frontend/src/pages/: Allowlist.tsx  AuditLog.tsx  Authority.tsx  Blacklist.tsx  Dashboard.tsx  FreezeThaw.tsx  Holders.tsx  Initialize.tsx  Metadata.tsx  MintBurn.tsx  MinterQuotas.tsx  PauseUnpause.tsx  Roles.tsx  Seize.tsx  Transfer.tsx
frontend/src/utils/: errors.ts  pda.ts
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss-token/src/instructions/: allowlist.rs  burn.rs  compliance.rs  freeze.rs  initialize.rs  metadata.rs  mint.rs  mod.rs  oracle.rs  pause.rs  roles.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
scripts/: devnet-smoke-test.sh  test-confidential-transfer.sh  test-oracle.ts
sdk/core/: package.json
sdk/core/src/: compliance.ts  index.ts  oracle.ts  pda.ts  stablecoin.ts  types.ts
tests/: cli-smoke.test.ts  edge-cases-extended.ts  roles-edge-cases.ts  sss-1.ts  sss-2.ts  sss-3.ts  supply-cap.ts
trident-tests/: README.md
trident-tests/fuzz_tests/fuzz_0/: Cargo.toml  fuzz_accounts.rs  test_fuzz.rs
tui/: package.json
tui/src/: dashboard.ts  data.ts  index.ts
(+1 files in other folders)
