[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "SSS Transfer Hook: Enforces blacklist checks on every Token-2022 transfer"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"], default-features = false }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
solana-security-txt = "1.1.1"
